--- a/overlay-aosp/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-aosp/frameworks/base/core/res/res/values/config.xml
@@ -43,4 +43,7 @@
          OnePlus 7 Pro. This HAL expects a different format for the data instead of the usual (ms)
          timing(the duration which the vibrator is expected to vibrate for). -->
     <bool name="config_hasOnePlusHapticMotor">true</bool>
+
+    <!-- Display has physical cutout -->
+    <bool name="config_physicalDisplayCutout">true</bool>
 </resources>
